# DocVector-

./: .gitignore  README.md  animations.js  app.py  index.html  model-card.md  pyproject.toml  setup.sh
.github/workflows/: publish.yml  test.yml
examples/: process_document.py  process_pdf.py  process_pdf_multi_provider.py  process_pdf_pinecone.py  test_setup.py
src/docvector/: __init__.py  chunking.py  config.py  embeddings.py  processor.py  types.py  vector_stores.py
static/css/: main.css  visualization.css
static/js/: main.js  visualization.js
templates/: index.html
tests/: test_processor.py
