[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docvector"
version = "0.1.0"
description = "DocVector: Intelligent Document Processing and Vector Database Integration"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Jabbir", email = "jabbir@example.com" }
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.10",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "qdrant-client>=1.7.0",
    "weaviate-client>=4.4.0",
    "pymilvus>=2.3.0",
    "sentence-transformers>=2.2.0",
    "cohere>=4.0.0",
    "openai>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14",
    "pypdf>=3.17.0",
    "docx2txt>=0.8",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "tqdm>=4.66.0",
    "rich>=13.6.0",
    "loguru>=0.7.0"
]

[project.urls]
Homepage = "https://github.com/jabbir-doodle/DocVector-"
Documentation = "https://github.com/jabbir-doodle/DocVector-/blob/main/README.md"
Repository = "https://github.com/jabbir-doodle/DocVector-.git"
Issues = "https://github.com/jabbir-doodle/DocVector-/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/docvector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/docvector"

[tool.coverage.run]
source = ["src/docvector"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
] 