[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docvector"
version = "0.1.0"
description = "DocVector: Intelligent Document Processing & Knowledge Management System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",           # OpenAI embeddings
    "mistralai>=0.0.7",        # Mistral embeddings
    "deepseek>=0.1.0",         # DeepSeek embeddings
    "pinecone-client>=2.2.4",  # Pinecone vector store
    "qdrant-client>=1.6.0",    # Qdrant vector store
    "weaviate-client>=3.25.2", # Weaviate vector store
    "pymilvus>=2.3.0",         # Milvus vector store
    "python-magic>=0.4.27",    # File type detection
    "PyPDF2>=3.0.0",          # PDF processing
    "python-docx>=0.8.11",     # Word document processing
    "beautifulsoup4>=4.12.0",  # HTML processing
    "markdown>=3.5.0",         # Markdown processing
    "numpy>=1.24.0",           # Numerical operations
    "tqdm>=4.65.0",           # Progress bars
    "loguru>=0.7.0",          # Logging
]

[project.urls]
Homepage = "https://github.com/jabbir-doodle/DocVector-"
Documentation = "https://github.com/jabbir-doodle/DocVector-/blob/main/README.md"
Repository = "https://github.com/jabbir-doodle/DocVector-.git"
Issues = "https://github.com/jabbir-doodle/DocVector-/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/docvector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/docvector"

[tool.coverage.run]
source = ["src/docvector"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "raise ImportError",
]

[tool.hatch.metadata]
allow-direct-references = true 